[package]
name = "lotus-rt"
version = "0.1.0"
edition = "2021"

[features]
default = ["std", "sync", "macros"]
std = []
lotus = ["dep:lotus-script"]
sync = ["dep:tokio", "tokio/sync"]
macros = ["dep:tokio", "tokio/macros"]

[dependencies]
lotus-script = { version = "0.5", optional = true }
thiserror = "1.0.63"
tokio = { version = "1.39.3", default-features = false, optional = true }

[profile.release]
lto = true
codegen-units = 1
