[package]
name = "lotus-rt"
version = "0.1.0"
edition = "2021"

[features]
default = ["std", "sync", "macros"]
std = []
lotus = ["dep:lotus-script"]
sync = ["dep:tokio", "tokio/sync"]
macros = ["dep:tokio", "tokio/macros"]

[dependencies]
lotus-script = { git = "https://github.com/Oriolus-Software/LOTUS-Scripting.git", branch = "master", optional = true }
thiserror = "2"
tokio = { version = "1", default-features = false, optional = true }

[profile.release]
lto = true
codegen-units = 1
